--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   qr_flutter: ^4.0.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
