--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^4.0.0
   qr_flutter: ^4.0.0
   provider: ^6.0.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
